# bootdotdev-rag

./: .gitignore  README.md  pyproject.toml
cli/: data_handling.py  evaluation_cli.py  hybrid_search_cli.py  inverted_index.py  keyword_commands.py  keyword_search_cli.py  search_utils.py  semantic_search_cli.py  test_gemini.py  text_handling.py
cli/lib/: chunked_semantic_search.py  gemini.py  hybrid_search.py  inverted_index.py  logging.py  semantic_search.py
