[project]
name = "bootdotdev-rag"
version = "0.1.0"
description = "A project for bootdotdev to practice RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.47.0",
    "nltk==3.9.1",
    "numpy>=2.3.4",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
]
